--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="utama">
 		<div class="nav">
 			<div class="logo">
-				<a href="indexUpload.html"><img id="ikonlogo" src="assets/bs3.png"></a>
+				<a href="index.html"><img id="ikonlogo" src="assets/bs3.png"></a>
 			</div>
 			<ul class="menu">
 				<li><a href="#home">Home</a></li>
@@ -89,4 +89,5 @@
 	
 <script src="styles/bs.js"></script>
 </body>
+
 </html>
