--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="utama">
 		<div class="nav">
 			<div class="logo">
-				<a href="index.html"><img id="ikonlogo" src="assets/BS3.png"></a>
+				<a href="index.html"><img id="ikonlogo" src="assets/bs3.png"></a>
 			</div>
 			<ul class="menu">
 				<li><a href="#home">Home</a></li>
@@ -31,7 +31,7 @@
 				<p>Setiap saat adalah persimpangan. Kamu bisa belok kiri, kamu bisa belok kanan, atau lurus terus ke depan. Kamu bisa kembali ke titik awal dan terus berkendara. Satu juta jalan terletak di kakimu, masing-masing lebih baik dari yang terakhir dan tidak lebih buruk dari yang berikutnya. Pilih jalur baru setiap detik dan jangan pernah melihat ke belakang. Karena semua yang kamu temukan di jalan adalah milik kamu selamanya. Dan begitulah caramu membuat perjalanan hidup.
 				</p>
 			</div>
-			<img src="assets/RC3.jpg" id="home-image" alt="home">	
+			<img src="assets/rc3.jpg" id="home-image" alt="home">	
 		</article>
 	
 		<article id="touring" class="card">
@@ -91,6 +91,7 @@
 </body>
 
 </html>
+
 
 
 
