--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
 </main>
 
 <footer>
-	<p>Bikers Solo &#169; 2020, For Submission Dicoding Academy</p>
+	<p>Bikers Solo &#169; 2025, For portfolio purposes </p>
 </footer>
 	
 <script src="styles/bs.js"></script>
 </body>
 
 </html>
+
 
 
 
