--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<h2 class="judul">BALAPAN</h2>
 			<div class="subjudul">
 				<p> 
-				Balapan otomotif, adu banteng, dan mendaki gunung adalah satu-satunya olahraga nyata... yang lainnya adalah games.
+				Gas penuh! Tidak ada ruang untuk ragu di dunia MotoGP!
 				</p>
 			</div>
 			<img src="assets/balap2.jpg" class="featured-image" alt="balap">
@@ -58,7 +58,7 @@
 			<h2 class="judul">KOMUNITAS</h2>
 			<div class="subjudul">
 				<p> 
-				Kita harus hidup bersama sebagai saudara atau binasa bersama sebagai orang bodoh.
+				Bersama dalam komunitas, kita saling menguatkan dan menciptakan perubahan positif.
 				</p>
 			</div>
 			<img src="assets/komunitas.jpg" class="featured-image" alt="komunitas">
@@ -91,6 +91,7 @@
 </body>
 
 </html>
+
 
 
 
